main: clean up